Finish 102599226 - Fix The + x more text should not overlap

--- a/app/assets/stylesheets/eventsCalendar.css.scss
+++ b/app/assets/stylesheets/eventsCalendar.css.scss
@@ -22,7 +22,7 @@
 			border: 1px solid #CCC;
 			border-right:0;
 			border-bottom:0;
-			height: 130px;
+			height: 145px;
 			.calendar-cell-wrapper {
 				position: relative;
 				width: 100%;
